--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <img class="Top_Mato"
-  src="https://github.com/Shishi-10/Home/blob/master/Top.JPG" alt="">
+  src="https://github.com/Shishi-10/Home/blob/master/Top" alt="">
 
   <nav>
     <ul class="container">
