--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </nav>
   <div class="container">
     <img class="Mato111"
-    src="https://github.com/Shishi-10/Home/blob/master/P1100608.jpg" alt="" width="600">
+    src="https://github.com/Shishi-10/Home/blob/master/P1100608.jpg?raw=true" alt="" width="600">
 
     <h1 class="Midashi">
 ししとう’s ホームページ
