--- a/About.html
+++ b/About.html
@@ -80,7 +80,7 @@ BVEで209-1000作っていたり。
   連絡先はこちらまで。<br>
   Twitterの方が気づくのが早いです。<br><br>
 <img class="mail"
-src="mail.png" alt="" width="400">
+src="https://github.com/Shishi-10/Home/blob/master/mail.png?raw=true" alt="" width="400">
 </div>
 </body>
 </html>
