--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav>
     <ul class="container">
       <li>
-        <a href="Home.html">ホーム</a>
+        <a href="https://shishi-10.github.io/Home/Home.html">ホーム</a>
       </li>
       <li>
         <a href="About.html">About Me</a>
