--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="https://shishi-10.github.io/Home/About.html">About Me</a>
       </li>
       <li>
-        <a href="https://shishi-10.github.io/Home/BVE.html">Bveデータ</a>
+        <a href="BVE.html">Bveデータ</a>
       </li>
       <li>
         <a href="https://shishi-10.github.io/Home/Kinkyo.html">近況</a>
