--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <nav>
     <ul class="container">
       <li>
-        <a href="https://shishi-10.github.io/Home/Home.html">ホーム</a>
+        <a href="https://shishi-10.github.io/Home/index.html">ホーム</a>
       </li>
       <li>
         <a href="https://shishi-10.github.io/Home/About.html">About Me</a>
       </li>
       <li>
-        <a href="BVE.html">Bveデータ</a>
+        <a href="https://shishi-10.github.io/Home/BVE.html">Bveデータ</a>
       </li>
       <li>
         <a href="https://shishi-10.github.io/Home/Kinkyo.html">近況</a>
