--- a/About.html
+++ b/About.html
@@ -11,25 +11,25 @@
 
   <img class="Top_Mato"
   src="https://github.com/Shishi-10/Home/blob/master/Top.JPG?raw=true" alt="">
-  <nav>
+   <nav>
     <ul class="container">
       <li>
-        <a href="Home.html">ホーム</a>
+        <a href="https://shishi-10.github.io/Home/">ホーム</a>
       </li>
       <li>
-        <a href="About.html">About Me</a>
+        <a href="https://shishi-10.github.io/Home/About.html">About Me</a>
       </li>
       <li>
-        <a href="BVE.html">Bveデータ</a>
+        <a href="https://shishi-10.github.io/Home/BVE.html">Bveデータ</a>
       </li>
       <li>
-        <a href="Kinkyo.html">近況</a>
+        <a href="https://shishi-10.github.io/Home/Kinkyo.html">近況</a>
       </li>
       <li>
-        <a href="Kiroku.html">撮影記録</a>
+        <a href="https://shishi-10.github.io/Home/Kiroku.html">撮影記録</a>
       </li>
       <li>
-        <a href="Kiroku_Mato.html">E231系マト車撮影記録</a>
+        <a href="https://shishi-10.github.io/Home/Kiroku_Mato.html">E231系マト車撮影記録</a>
       </li>
       <li>
         <a href="https://twitter.com/Joban_E231">Twitter</a>
@@ -38,7 +38,7 @@
         <a href="https://www.youtube.com/channel/UCufzHNAUamwTqm5SC7Tk16A/featured">YouTube</a>
       </li>
       <li>
-        <a href="link.html">リンク</a>
+        <a href="https://shishi-10.github.io/Home/link.html">リンク</a>
       </li>
     </ul>
   </nav>
