--- a/Kiroku.html
+++ b/Kiroku.html
@@ -50,7 +50,7 @@
 <p>
   E231系マト車はこちらにあげています
 </p>
-<div class="Kiroku_Mato">
+<div class="https://shishi-10.github.io/Home/Kiroku_Mato.html">
 
       <a href="Kiroku_Mato.html" class="Kiroku_Mato">E231系マト車撮影記録</a>
 </div>
