--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -52,7 +52,7 @@ E231系マト車撮影記録
 </p>
 <div class="Kiroku">
 
-      <a href="Kiroku.html" class="Kiroku">撮 影 記 録</a>
+      <a href="https://shishi-10.github.io/Home/Kiroku.html" class="Kiroku">撮 影 記 録</a>
 </div>
 <div class="Hommbun">
 <h3 class="Midashi">
