--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="Hommbun">
 ししとうのホームページです。<br>
 ここではBVEデータの公開・進捗とか撮影記録を上げていく予定です。<br>
-BVEで209-1000を製作中。<br>
+BVE5で209-1000を製作中。<br>
 Twitterの方が更新頻度が高いです。<br>
 上部のメニューからお入りください。
     </p>
