--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+  <meta name="google-site-verification" content="Z5qDKe84iLHfownw5zuTUqEBQh7imfLMqbrU8XVa3lA" />
   <meta charset="UTF-8">
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
