--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" type="image/png" href="https://github.com/Shishi-10/Home/blob/master/icon.png?raw=true">
   <meta name="google-site-verification" content="Z5qDKe84iLHfownw5zuTUqEBQh7imfLMqbrU8XVa3lA" />
   <meta charset="UTF-8">
   <link rel = "stylesheet" href="style.css">
