--- a/BVE.html
+++ b/BVE.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <link rel="icon" type="image/png" href="https://github.com/Shishi-10/Home/blob/master/icon.png?raw=true">
   <meta charset="UTF-8">
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
