--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  google-site-verification=EJTaV1-YDqhGdiHDTjeqdbHpJZcmVmzsgRNpoF_XnWM
   <link rel="icon" type="image/png" href="https://github.com/Shishi-10/Home/blob/master/icon.png?raw=true">
-  <meta name="google-site-verification" content="Z5qDKe84iLHfownw5zuTUqEBQh7imfLMqbrU8XVa3lA" />
+  <meta name="google-site-verification=EJTaV1-YDqhGdiHDTjeqdbHpJZcmVmzsgRNpoF_XnWM" />
   <meta charset="UTF-8">
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
