--- a/Kiroku.html
+++ b/Kiroku.html
@@ -60,16 +60,34 @@
 新津工臨返空
 </h3>
 <h4 class="Midashi">
-投稿:2020/?/?<br>
+投稿:2020/9/1<br>
 撮影:2020/6/6
 </h4>
 <h4 class="Midashi">
 工9512レ EF81-81+ロンチキB編成13B
 </h4>
-<img class="img0" src="P1110100.jpg" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1110100.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
 やっぱりお召機は堂々としていてカッコいいですね<br>
 この特別感が好きです...
+</p>
+    </div>
+      <div class="Hommbun">
+<h3 class="Midashi">
+伊東工臨返空
+</h3>
+<h4 class="Midashi">
+投稿:2020/9/12<br>
+撮影:2020/9/12
+</h4>
+<h4 class="Midashi">
+工9842レ EF65-1115+ロンチキA編成10B
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120870.jpg?raw=true" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120882.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+もしかしたらEF65-1115の最後の工臨ということで出撃<br>
+雨の中自転車こいで行って来ました
 </p>
     </div>
 <br>
@@ -78,7 +96,11 @@
   更新履歴
 </h2>
 <p class="Hommbun">
-??.??.?? <br>
+2020.9.12 <br>
+伊東工臨返空を追加
+</p>
+<p class="Hommbun">
+2020.9.1 <br>
 新津工臨返空を追加
 </p>
 </div>
