--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <p class="Hommbun">
 ししとうのホームページです。<br>
+スマートフォンで閲覧の方は表示が崩れるため、PC版ページを表示する設定にしておいた方が良いと思います<br>
 ここではBVEデータの公開・進捗とか撮影記録を上げていく予定です。<br>
 BVE5で209-1000を製作中。<br>
 Twitterの方が更新頻度が高いです。<br>
