--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -55,6 +55,24 @@ E231系マト車撮影記録
 
       <a href="https://shishi-10.github.io/Home/Kiroku.html" class="Kiroku">撮 影 記 録</a>
 </div>
+      <div class="Hommbun">
+<h3 class="Midashi">
+マト110編成
+</h3>
+<h4 class="Midashi">
+投稿:2020/9/28<br>
+撮影:2020/9/28
+</h4>
+<h4 class="Midashi">
+1588H 快速 上野行き E231系 マト110編成
+</h4>
+<img class="img0" src="P1100608.jpg" alt="" width="600">
+<p class="Hommbun">
+劣化帯で有名なマト110編成。<br>
+裏被りと幕負けが気になります...<br>
+再履修したい
+</p>
+    </div>
 <div class="Hommbun">
 <h3 class="Midashi">
 マト111編成
