--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -66,7 +66,7 @@ E231系マト車撮影記録
 <h4 class="Midashi">
 1588H 快速 上野行き E231系 マト110編成
 </h4>
-<img class="img0" src="P1100608.jpg" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120980.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
 劣化帯で有名なマト110編成。<br>
 裏被りと幕負けが気になります...<br>
@@ -84,7 +84,7 @@ E231系マト車撮影記録
 <h4 class="Midashi">
 1680H 快速 上野行き E231系 マト111編成
 </h4>
-<img class="img0" src="P1100608.jpg" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1100608.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
 TK入場の際に張り替えられてしまい、今は見られなくなった抹茶帯。<br>
 夕方の最高の光線の中で撮れて良かったです！
