--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <img class="Top_Mato"
   src="https://github.com/Shishi-10/Home/blob/master/Top.JPG?raw=true" alt="">
-
+<center>
   <nav>
     <ul class="container">
       <li>
@@ -45,7 +45,7 @@
       </li>
     </ul>
   </nav>
-  
+  <center>
   <div class="container">
         <h1 class="Midashi">
 ししとう’s ホームページ
