--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   src="https://github.com/Shishi-10/Home/blob/master/Top.JPG?raw=true" alt="">
 
   <nav>
-    <ul class="container">
+    <ul class="container_nav">
       <center>
       <li>
         <a href="https://shishi-10.github.io/Home/">ホーム</a>
