--- a/BVE.html
+++ b/BVE.html
@@ -55,10 +55,12 @@
   <img class="Tomato81"
   src="https://github.com/Shishi-10/Home/blob/master/Tomato81.jpg?raw=true" alt="" width="400">
     <p class="Hommbun">
-  まだ完成してません！！！<br>
-  ごめんなさい<br>
-  マト車トタ車の両方を再現する予定です<br>
-  下のリンクからダウンロードできる予定です！！！
+  2020/12/25<br>
+  公開しました<br>
+  下のリンクから公開ページにお入りください<br>
+<div class="Kiroku_Mato">
+      <a href="BVE2091000.html" class="Kiroku_Mato">公 開 ペ ー ジ</a>
+</div>
     </p>
     </div>
 </body>
