--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -72,7 +72,7 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
  改造を含む運転動画は禁止にはしませんが、あまりにも常識に欠けるような改造だった場合には、
  当該動画の削除をお願いするかもしれません。<br>
 ・公開中のデータを指定した路線を公開する場合は、下の連絡先までご連絡ください。<br>
-・wikiに載せるのは構いません。5chのbveスレで批判するのも結構です。批判されないと直さないような人なので。<br>
+・wikiに載せるのは構いません。個人を中傷する内容でなければ、5chのbveスレで当データを批判するのも結構です。批判されないと直さないような人なので。<br>
 <br>
 以上の事にご了承いただけましたら、下のリンクよりダウンロードください。<br>
 <br>
