--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Twitterの方が更新頻度が高いです。<br>
   更新履歴
 </h2>
 <p class="Hommbun">
+  ??.??.?? <br>
+  bve5用209系1000番台を公開<br>
 ??.??.?? <br>
   ホームページ開設
 </p>
