--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -49,12 +49,11 @@
     <h1 class="Midashi">
 BVE5用車両データ 209系1000番台
   </h1>
-    <h2 class="Midashi">
+  <img src="https://github.com/Shishi-10/Home/blob/master/bve209-1000.png?raw=true" alt="" width="400px">
+<br>
+          <h2 class="Midashi">
 データについて
 </h2>
-      
-  <img src="https://github.com/Shishi-10/Home/blob/master/bve209-1000.png?raw=true" alt="">
-<br>
 209系1000番台を再現した「車両アドオン」です。<br>
 BVE5.8で動作を確認しております。それ以外のバージョンでのサポートは致しません。<br>
 BVE6では動作致しません。<br>
