--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -52,6 +52,11 @@ BVE5用車両データ 209系1000番台
       <br>
         <img src="https://github.com/Shishi-10/Home/blob/master/bve209-1000.png?raw=true" alt="" width="700px">
 <br>
+      <h1>
+          2020/12/25
+          One Drive不調によりファイルが削除されていましたので、Google Driveへのリンクに差し替えました。<br>
+         クリスマス限定というわけではないのでゆっくりダウンロードしていただいて構いません。<br>
+          ご迷惑おかけして申し訳ありません。
           <h2 class="Midashi">
 データについて
 </h2>
@@ -81,7 +86,7 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
 以上の事にご了承いただけましたら、下のリンクよりダウンロードください。<br>
 <br>
 <div class="Kiroku_Mato">
-      <a href="https://1drv.ms/u/s!Ak5vA9yIzoWLa72ZUFVoKDCF_vg?e=uKHlM8" class="Kiroku_Mato">　 ダ ウ ン ロ ー ド</a>
+      <a href="https://drive.google.com/file/d/1edwVQdHY7cebXsBiRVvxEZvEOj12B2DD/view?usp=sharing" class="Kiroku_Mato">　 ダ ウ ン ロ ー ド</a>
 </div>
     </p>
     </div>
