--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -52,11 +52,13 @@ BVE5用車両データ 209系1000番台
       <br>
         <img src="https://github.com/Shishi-10/Home/blob/master/bve209-1000.png?raw=true" alt="" width="700px">
 <br>
-      <h2 class="Midashi" color="red">
+      <h2 class="Midashi">
+          <font color="red">
           2020/12/25<br>
           One Drive不調によりファイルが削除されていましたので、Google Driveへのリンクに差し替えました。<br>
          クリスマス限定というわけではないのでゆっくりダウンロードしていただいて構いません。<br>
           ご迷惑おかけして申し訳ありません。<br>
+          </font>
       </h2>
           <h2 class="Midashi">
 データについて
