--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -56,7 +56,7 @@ BVE5用車両データ 209系1000番台
           <font color="red">
               <b>
           2020/12/26<br>
-          One Drive不調によりファイルが削除されていましたので、Google Driveへのリンクに差し替えました。<br>
+          One Driveの不調によりファイルが削除されていましたので、Google Driveへのリンクに差し替えました。<br>
          クリスマス限定というわけではないのでゆっくりダウンロードしていただいて構いません。<br>
           ご迷惑おかけして申し訳ありません。<br>
               </b>
