--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -52,16 +52,7 @@ BVE5用車両データ 209系1000番台
       <br>
         <img src="https://github.com/Shishi-10/Home/blob/master/bve209-1000.png?raw=true" alt="" width="700px">
 <br>
-      <h2 class="Midashi">
-          <font color="red">
-              <b>
-          2020/12/26<br>
-          One Driveの不調によりファイルが削除されていましたので、Google Driveへのリンクに差し替えました。<br>
-         クリスマス限定というわけではないのでゆっくりダウンロードしていただいて構いません。<br>
-          ご迷惑おかけして申し訳ありません。<br>
-              </b>
-          </font>
-      </h2>
+
           <h2 class="Midashi">
 データについて
 </h2>
@@ -74,6 +65,10 @@ BVE6では動作致しません。<br>
 所詮は中学生が趣味で作ったものなのであんまり期待しないでください。<br>
 
 Read me.txtにZipファイルのパスワードがありますので最後まで見てください。<br>
+      
+2021/1/3<br>
+      追記:ATS-Pプラグインを入れ忘れてたので修正しました。<br>
+      何度もすみません...
 
     <h2 class="Midashi">
 利用上の注意
