--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -88,7 +88,13 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
 <div class="Kiroku_Mato">
       <a href="https://drive.google.com/file/d/1M1SRBqa6h7YHFaCDeKh9BxB4hIJpoWfF/view?usp=sharing" class="Kiroku_Mato">　 ダ ウ ン ロ ー ド</a>
 </div>
-    </p>
+    </p><br>
+    <p class="Hommbun">
+  2020.12.25 <br>
+  公開<br>
+  2021.1.3 <br>
+  ATS-Pプラグインを入れ忘れていたので修正<br>
+</p>
     </div>
 </body>
 </html>
