--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -89,6 +89,11 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
       <a href="https://drive.google.com/file/d/1M1SRBqa6h7YHFaCDeKh9BxB4hIJpoWfF/view?usp=sharing" class="Kiroku_Mato">　 ダ ウ ン ロ ー ド</a>
 </div>
     </p><br>
+    
+    <div class="container">
+  <h2 class="Koshin">
+  更新履歴
+</h2>
     <p class="Hommbun">
   2020.12.25 <br>
   公開<br>
