--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ Twitterの方が更新頻度が高いです。<br>
   更新履歴
 </h2>
 <p class="Hommbun">
+  2020.1.3 <br>
+  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br>
   2020.12.25 <br>
   bve5用209系1000番台を公開<br>
 2020.9.1 <br>
