--- a/Shinano.html
+++ b/Shinano.html
@@ -6,33 +6,33 @@
 
 <BODY>
 
-<div style="position: relative; top : 0px; left : 0px;"><IMG src="Shinano.png" style="width:1300px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_1.png" id="img1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_2.png" id="img2" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_2-1.png" id="img2-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_F2-1.png" id="imgF2-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_3.png" id="img3" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_3-1.png" id="img3-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_4.png" id="img4" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_4-1.png" id="img4-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_5.png" id="img5" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_5-1.png" id="img5-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_6.png" id="img6" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_6-1.png" id="img6-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_7.png" id="img7" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_8.png" id="img8" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_8-1.png" id="img8-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_9.png" id="img9" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_9-1.png" id="img9-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_10.png" id="img10" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_10-1.png" id="img10-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_11.png" id="img11" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_21.png" id="img21" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_21-1.png" id="img21-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_22.png" id="img22" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_22-1.png" id="img22-1" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_23.png" id="img23" style="width:0px"></div>
-<div style="position: absolute; top : 8px; left : 8px;"><IMG src="Shinano_変8-1.png" id="img8-1_" style="width:0px"></div>
+<div style="position: relative; top : 0px; left : 0px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano.png" style="width:1300px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_1.png" id="img1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_2.png" id="img2" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_2-1.png" id="img2-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_F2-1.png" id="imgF2-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_3.png" id="img3" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_3-1.png" id="img3-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_4.png" id="img4" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_4-1.png" id="img4-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_5.png" id="img5" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_5-1.png" id="img5-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_6.png" id="img6" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_6-1.png" id="img6-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_7.png" id="img7" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_8.png" id="img8" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_8-1.png" id="img8-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_9.png" id="img9" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_9-1.png" id="img9-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/Shinano_10.png" id="img10" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/Shinano_10-1.png" id="img10-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/Shinano_11.png" id="img11" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/https://github.com/Shishi-10/Home/blob/master/Shinano_21.png" id="img21" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_21-1.png" id="img21-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_22.png" id="img22" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_22-1.png" id="img22-1" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_23.png" id="img23" style="width:0px"></div>
+<div style="position: absolute; top : 8px; left : 8px;"><IMG src="https://github.com/Shishi-10/Home/blob/master/Shinano_変8-1.png" id="img8-1_" style="width:0px"></div>
 </div></div>
 
 <FORM name="f1">
