--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>BVEアドオン/209系1000番台/title>
+  <title>About me</title>
 </head>
 <body>
 
