--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -6,7 +6,7 @@
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ししとう’sホームページ</title>
+  <title>E231系マト車撮影記録</title>
 </head>
 <body>
 
