--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -68,9 +68,6 @@ E231系マト車撮影記録
 </h4>
 <img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120980.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
-劣化帯で有名なマト110編成。<br>
-裏被りと幕負けが気になります...<br>
-再履修したい
 </p>
     </div>
 <div class="Hommbun">
@@ -88,7 +85,7 @@ E231系マト車撮影記録
 
     </div>
 <br>
-<div class="container">
+<div class="hommbun">
   <h2 class="Koshin">
   更新履歴
 </h2>
