--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -75,7 +75,7 @@ E231系マト車撮影記録
 マト111編成
 </h3>
 <h4 class="Midashi">
-投稿:2020/?/?<br>
+投稿:2020/9/4<br>
 撮影:2020/5/29
 </h4>
 <h4 class="Midashi">
@@ -90,7 +90,9 @@ E231系マト車撮影記録
   更新履歴
 </h2>
 <p class="Hommbun">
-??.??.?? <br>
+2020.9.28 <br>
+マト110編成を追加
+2020.9.4 <br>
 マト111編成を追加
 </p>
 </div>
