--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -123,8 +123,10 @@ E231系マト車撮影記録
   更新履歴
 </h2>
 <p class="Hommbun">
+2021.4.11 <br>
+マト119編成・マト103編成を追加 <br>
 2020.9.28 <br>
-マト110編成を追加
+マト110編成を追加 <br>
 2020.9.4 <br>
 マト111編成を追加
 </p>
