--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -124,9 +124,9 @@ E231系マト車撮影記録
 </h2>
 <p class="Hommbun">
 2021.4.11 <br>
-マト119編成・マト103編成を追加 <br>
+マト119編成・マト103編成を追加 <br><br>
 2020.9.28 <br>
-マト110編成を追加 <br>
+マト110編成を追加 <br><br>
 2020.9.4 <br>
 マト111編成を追加
 </p>
