--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ Twitterの方が更新頻度が高いです。<br>
 </h2>
 <p class="Hommbun">
   2020.1.3 <br>
-  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br>
+  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br><br>
   2020.12.25 <br>
-  bve5用209系1000番台を公開<br>
+  bve5用209系1000番台を公開<br><br>
 2020.9.3 <br>
   ホームページ開設
 </p>
