--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -95,10 +95,11 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
   更新履歴
 </h2>
     <p class="Hommbun">
-  2020.12.25 <br>
-  公開<br>
-  2021.1.3 <br>
-  ATS-Pプラグインを入れ忘れていたので修正<br>
+2021.1.3 <br>
+ATS-Pプラグインを入れ忘れていたので修正<br><br>
+2020.12.25 <br>
+公開<br>
+
 </p>
     </div>
 </body>
