--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -91,7 +91,7 @@ Read me.txtにZipファイルのパスワードがありますので最後まで
     </p><br>
     
     <div class="container">
-  <h2 class="Koshin">
+  <h2 class="Hommbun">
   更新履歴
 </h2>
     <p class="Hommbun">
