--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ Twitterの方が更新頻度が高いです。<br>
   bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br><br>
 2020.12.25 <br>
   bve5用209系1000番台を公開<br><br>
+2020.9.28 <br>
+  E231系マト車撮影記録を更新<br><br>
 2020.9.12 <br>
   撮影記録を更新<br><br>
 2021.9.4 <br>
