--- a/Kinkyo.html
+++ b/Kinkyo.html
@@ -56,7 +56,7 @@
 209系の近況
 </h2>
     <h3 class="Midashi">
-2020/?/?
+2020/9/4
   </h3>
     <img class="Shinchoku"
     src="Shinchoku1.png" alt="" width="600">
@@ -70,8 +70,8 @@
         更新履歴
       </h2>
       <p class="Hommbun">
-      ??.??.?? <br>
-209系の近況を更新
+      2020.9.4 <br>
+209系の近況を公開
       </p>
       </div>
 </body>
