--- a/Kiroku.html
+++ b/Kiroku.html
@@ -92,11 +92,9 @@
 更新履歴
 </h2>
 <p class="Hommbun">
-2020.9.12 <br>
-伊東工臨返空を追加
-</p>
-<p class="Hommbun">
-<b>2020.9.4<b> <br>
+<b>2020.9.12</b> <br>
+伊東工臨返空を追加<br>
+<b>2020.9.4</b> <br>
 新津工臨返空を追加
 </p>
 </div>
