--- a/index.html
+++ b/index.html
@@ -69,20 +69,23 @@ Twitterの方が更新頻度が高いです。<br>
   更新履歴
 </h2>
 <p class="Hommbun">
-  
-2021.1.3 <br>
-  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br><br>
-2020.12.25 <br>
-  bve5用209系1000番台を公開<br><br>
-2020.9.28 <br>
-  E231系マト車撮影記録を更新<br><br>
-2020.9.12 <br>
+    <b>2021.1.3</b> <br>
+  E231系マト車撮影記録を更新<br>
+    <b>2021.1.3</b> <br>
+  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br>
+  <b>2021.1.3</b> <br>
+  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br>
+<b>2020.12.25</b> <br>
+  bve5用209系1000番台を公開<br>
+<b>2020.9.28</b> <br>
+  E231系マト車撮影記録を更新<br>
+<b>2020.9.12</b> <br>
   撮影記録を更新<br><br>
-2021.9.4 <br>
-  E231系マト車撮影記録を更新<br><br>
-2020.9.4 <br>
-  撮影記録を更新<br><br>
-2020.9.3 <br>
+<b>2021.9.4</b> <br>
+  E231系マト車撮影記録を更新<br>
+<b>2020.9.4</b> <br>
+  撮影記録を更新<br>
+<b>2020.9.3</b> <br>
   ホームページ開設
 </p>
 </div>
