--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Twitterの方が更新頻度が高いです。<br>
 <b>2020.9.28</b> <br>
   E231系マト車撮影記録を更新<br>
 <b>2020.9.12</b> <br>
-  撮影記録を更新<br><br>
+  撮影記録を更新<br>
 <b>2021.9.4</b> <br>
   E231系マト車撮影記録を更新<br>
 <b>2020.9.4</b> <br>
