--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -55,6 +55,40 @@ E231系マト車撮影記録
 
       <a href="https://shishi-10.github.io/Home/Kiroku.html" class="Kiroku">撮 影 記 録</a>
 </div>
+           <div class="Hommbun">
+<h3 class="Midashi">
+マト116編成
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/11<br>
+撮影:2021/4/7
+</h4>
+<h4 class="Midashi">
+1684H 快速 上野行き E231系 マト116編成
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1170827M.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+    <br>
+</p>
+    </div>
+      
+      <div class="Hommbun">
+<h3 class="Midashi">
+マト102編成
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/11<br>
+撮影:2021/4/7
+</h4>
+<h4 class="Midashi">
+1588H 快速 上野行き E231系 マト102編成
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1170827M.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+    <br>
+</p>
+    </div>
+      
 <div class="Hommbun">
 <h3 class="Midashi">
 マト103編成
