--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -158,7 +158,7 @@ E231系マト車撮影記録
 </h2>
 <p class="Hommbun">
     <b>2021.4.11</b> <br>
-マト119編成・マト103編成を追加 <br>
+マト119編成・マト103編成・マト102編成・マト116編成を追加 <br>
 <b>2020.9.28</b> <br>
 マト110編成を追加 <br>
 <b>2020.9.4</b> <br>
