--- a/Kiroku.html
+++ b/Kiroku.html
@@ -55,6 +55,83 @@
 
       <a href="Kiroku_Mato.html" class="Kiroku_Mato">E231系マト車撮影記録</a>
 </div>
+                  <div class="Hommbun">
+<h3 class="Midashi">
+武蔵野線205系 最後の休日
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/13<br>
+撮影:2020/10/18
+</h4>
+<h4 class="Midashi">
+1083E 南船橋行き 205系M20編成
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1130242.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+</p>
+    </div>
+                  <div class="Hommbun">
+<h3 class="Midashi">
+ジャカルタ配給
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/13<br>
+撮影:2020/10/14
+</h4>
+<h4 class="Midashi">
+配9723レ EF81-134+205系M17編成8B
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1130212.jpg?raw=true" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120219.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+</p>
+    </div>
+                  <div class="Hommbun">
+<h3 class="Midashi">
+秋刀魚
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/13<br>
+撮影:2020/10/3
+</h4>
+<h4 class="Midashi">
+68T急行 南栗橋行き 東武30000系31409F+31609F
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1130136.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+</p>
+    </div>
+                  <div class="Hommbun">
+<h3 class="Midashi">
+新津工臨返空
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/13<br>
+撮影:2020/6/18
+</h4>
+<h4 class="Midashi">
+工9512レ EF65-1115+ロンチキA編成13B
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1110614.jpg?raw=true" alt="" width="600">
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120623.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+</p>
+    </div>
+                  <div class="Hommbun">
+<h3 class="Midashi">
+水戸工臨
+</h3>
+<h4 class="Midashi">
+投稿:2021/4/13<br>
+撮影:2020/6/12
+</h4>
+<h4 class="Midashi">
+工6332レ EF81-98+ホキ4B
+</h4>
+<img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1110420.jpg?raw=true" alt="" width="600">
+<p class="Hommbun">
+</p>
+    </div>
             <div class="Hommbun">
 <h3 class="Midashi">
 伊東工臨返空
