--- a/Kiroku.html
+++ b/Kiroku.html
@@ -169,6 +169,8 @@
 更新履歴
 </h2>
 <p class="Hommbun">
+<b>2021.4.13</b> <br>
+水戸工臨・新津工臨返空・秋刀魚・ジャカルタ配給・武蔵野線205系 最後の休日を追加<br>
 <b>2020.9.12</b> <br>
 伊東工臨返空を追加<br>
 <b>2020.9.4</b> <br>
