--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -116,6 +116,9 @@ E231系マト車撮影記録
 <h4 class="Midashi">
 1480H 快速 上野行き E231系 マト119編成
 </h4>
+             <p class="Hommbun">
+       備考:元ミツ車・ホーム検知装置付き
+        </p>
 <img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120950.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
     <br>
@@ -132,6 +135,9 @@ E231系マト車撮影記録
 <h4 class="Midashi">
 1588H 快速 上野行き E231系 マト110編成
 </h4>
+              <p class="Hommbun">
+       備考:劣化帯
+        </p>
 <img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1120980.jpg?raw=true" alt="" width="600">
 <p class="Hommbun">
     <br>
@@ -148,6 +154,10 @@ E231系マト車撮影記録
 <h4 class="Midashi">
 1680H 快速 上野行き E231系 マト111編成
 </h4>
+    <p class="Hommbun">
+       備考:抹茶帯<br>
+        <font color="red"> ※マト110編成の抹茶帯は2020/7のTK入場の際に張り替えられ、現在は通常の帯になっています。</font>
+        </p>
 <img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1100608.jpg?raw=true" alt="" width="600">
 
     </div>
@@ -157,11 +167,11 @@ E231系マト車撮影記録
   更新履歴
 </h2>
 <p class="Hommbun">
-    <b>2021.4.11</b> <br>
+    <b>2021/4/11</b> <br>
 マト119編成・マト103編成・マト102編成・マト116編成を追加 <br>
-<b>2020.9.28</b> <br>
+<b>2020/9/28</b> <br>
 マト110編成を追加 <br>
-<b>2020.9.4</b> <br>
+<b>2020/9/4</b> <br>
 マト111編成を追加
 </p>
 </div>
