--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -156,7 +156,7 @@ E231系マト車撮影記録
 </h4>
     <p class="Hommbun">
        備考:抹茶帯<br>
-        <font color="red"> ※マト110編成の抹茶帯は2020/7のTK入場の際に張り替えられ、現在は通常の帯になっています。</font>
+        <font color="red"> ※マト110編成の抹茶帯は2020/7のTK入場の際に、通常の帯に張り替えられました。</font>
         </p>
 <img class="img0" src="https://github.com/Shishi-10/Home/blob/master/P1100608.jpg?raw=true" alt="" width="600">
 
