--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ Twitterの方が更新頻度が高いです。<br>
   更新履歴
 </h2>
 <p class="Hommbun">
+      <b>2021/4/13</b> <br>
+  撮影記録を更新<br>
     <b>2021/4/11</b> <br>
   E231系マト車撮影記録を更新<br>
   <b>2021/1/3</b> <br>
