--- a/About.html
+++ b/About.html
@@ -83,5 +83,31 @@ BVEで209-1000作っていたり。
 <img class="mail"
 src="https://github.com/Shishi-10/Home/blob/master/mail_Twi.png?raw=true" alt="" width="400">
 </div>
+    <br>
+    <div class="container">
+  <h2 class="Koshin">
+  更新履歴
+</h2>
+<p class="Hommbun">
+      <b>2021/4/13</b> <br>
+  撮影記録を更新<br>
+    <b>2021/4/11</b> <br>
+  E231系マト車撮影記録を更新<br>
+  <b>2021/1/3</b> <br>
+  bve5用209系1000番台にATS-Pプラグインを入れ忘れていたので修正<br>
+<b>2020/12/25</b> <br>
+  bve5用209系1000番台を公開<br>
+<b>2020/9/28</b> <br>
+  E231系マト車撮影記録を更新<br>
+<b>2020/9/12</b> <br>
+  撮影記録を更新<br>
+<b>2021/9/4</b> <br>
+  E231系マト車撮影記録を更新<br>
+<b>2020/9/4</b> <br>
+  撮影記録を更新<br>
+<b>2020/9/3</b> <br>
+  ホームページ開設
+</p>
+</div>
 </body>
 </html>
