--- a/Kinkyo.html
+++ b/Kinkyo.html
@@ -51,7 +51,18 @@
 近況
 </h1>
 <p class="Hommbun">
-  ここでは制作中のBVEデータの近況をお知らせします
+  ここでは制作中のBVEデータの近況をお知らせします<br>
+         <h2 class="Midashi">
+描き直し
+</h2>
+    <h3 class="Midashi">
+2021/6/3
+  </h3>
+    <img class="Shinchoku"
+    src="Shinchoku1.png" alt="" width="600">
+      <p class="Hommbun">
+Panelのリニューアルを進めています
+      </p><br>
       <h2 class="Midashi">
 209系の近況
 </h2>
@@ -71,7 +82,7 @@
       </h2>
       <p class="Hommbun">
           <b>  2020/9/4 </b><br>
-209系の近況を公開
+「209系の近況」を公開
       </p>
       </div>
 </body>
