--- a/Kinkyo.html
+++ b/Kinkyo.html
@@ -81,6 +81,8 @@ Panelのリニューアルを進めています
         更新履歴
       </h2>
       <p class="Hommbun">
+                   <b>  2021/6/3 </b><br>
+「描き直し」を公開<br>
           <b>  2020/9/4 </b><br>
 「209系の近況」を公開
       </p>
