--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel = "stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ししとう’sホームページ</title>
+  <title>ししとう’sホームページ(仮)</title>
 </head>
 <body>
 
@@ -50,7 +50,7 @@
  
   <div class="container">
         <h1 class="Midashi">
-ししとう’s ホームページ
+ししとう’s ホームページ(仮)
 </h1>
     <img class="Mato111"
     src="https://github.com/Shishi-10/Home/blob/master/P1170858M.jpg?raw=true" alt="" width="600">
