--- a/Kinkyo.html
+++ b/Kinkyo.html
@@ -59,7 +59,7 @@
 2021/6/3
   </h3>
     <img class="Shinchoku"
-    src="Shinchoku1.png" alt="" width="600">
+    src="https://github.com/Shishi-10/Home/blob/master/0602.png?raw=true" alt="" width="600">
       <p class="Hommbun">
 Panelのリニューアルを進めています
       </p><br>
