--- a/Kiroku_Mato.html
+++ b/Kiroku_Mato.html
@@ -186,6 +186,8 @@ E231系マト車撮影記録
   更新履歴
 </h2>
 <p class="Hommbun">
+        <b>2021/6/3</b> <br>
+マト139編成を追加 <br>
     <b>2021/4/11</b> <br>
 マト119編成・マト103編成・マト102編成・マト116編成を追加 <br>
 <b>2020/9/28</b> <br>
