--- a/Departing.html
+++ b/Departing.html
@@ -21,7 +21,8 @@ styleタグ内.btn_x
 
 <h1>発メロ_テスト版</h1>
 <p>ONで再生、OFFで再生終了からの戸閉放送、ALL OFFで全て再生終了<br>
-品川駅5番線</p>
+品川駅5番線<br>
+つべで適当に拾ってきた音源だからあんま広めるとまずいです</p>
 
 <!--//////////-->
 <!--ループ対応-->
