--- a/BVE2091000.html
+++ b/BVE2091000.html
@@ -34,8 +34,8 @@
       <li>
         <a href="https://shishi-10.github.io/Home/Kiroku_Mato.html">E231系マト車撮影記録</a>
       </li>
-      <li>
-        <a href="https://twitter.com/Joban_E231">Twitter</a>
+      <li>shishi_mato_sub
+        <a href="https://twitter.com/shishi_mato_sub">Twitter</a>
       </li>
       <li>
         <a href="https://www.youtube.com/channel/UCufzHNAUamwTqm5SC7Tk16A/featured">YouTube</a>
